<resources>
    <string name="app_name">t3a3-benavent-vicent3</string>

    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>

    <string name="navigation_drawer_open" translatable="false">Abrir menú</string>
    <string name="navigation_drawer_close" translatable="false">Cerrar menú</string>


    <string name="globalPosition">POSICION GLOBAL</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="transferencia">TRANSFERENCIA</string>
    <string name="changePassword">CAMBIAR CONTRASEÑA</string>
    <string name="promotions">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="exitBank">SALIR</string>
    <string name="Salir" translatable="false" />
    <string name="Cambiar" translatable="false">Cambiar</string>
    <string name="cambiar_contrase_a" translatable="false">Cambiar Contraseña</string>
    <string name="nueva_contrase_a" translatable="false">Nueva Contraseña</string>
    <string name="repetir_contrase_a" translatable="false">Repetir Contraseña</string>
    <string name="cuentas">Cuentas:</string>
    <string name="posicion_globall">POSICION GLOBAL</string>
    <string name="movimientoss">MOVIMIENTOS</string>
    <string name="selecciona_una_cuenta">Seleccione una cuenta:</string>
    <string name="ultimos_movimientos">Ultimos movimientos:</string>
    <string name="lo_que_sea">lo que sea XDDDDD</string>
    <string-array name="cuentas">
        <item>ES-6723-4626-9013</item>
        <item>ES-8909-2723-2367</item>
        <item>ES-9120-3255-3242</item>
        <item>ES-4793-3256-9765</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atm_list">ATM List</string>
    <string name="atm_add">ATM ADD</string>
    <string name="atm_listdf">ATM List</string>
    <string name="select_atm">Select ATM:</string>
    <string name="adress">Adress</string>
    <string name="latitudx">Latitud</string>
    <string name="longitudx">Longuitud</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel\n</string>
</resources>